--- a/.github/workflows/slim_externals.yaml
+++ b/.github/workflows/slim_externals.yaml
@@ -24,8 +24,8 @@ jobs:
     steps:
       - name: Intro
         run: |
-        echo "Will create a ghcr.io/dune-daq/sl7-slim-externals:v1.1${{ github.event.inputs.tag-suffix }} image"
-        echo "Image contents will include $HOSTNAME:/home/${{ github.events.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq/spack/externals/ext-v1.1"
+          echo "Will create a ghcr.io/dune-daq/sl7-slim-externals:v1.1${{ github.event.inputs.tag-suffix }} image"
+          echo "Image contents will include $HOSTNAME:/home/${{ github.event.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq/spack/externals/ext-v1.1"
 
       - name: Log in to the Container registry
         uses: docker/login-action@v2
@@ -46,7 +46,7 @@ jobs:
       - name: prepare build dir
         id: prep_build_dir
         run: |
-          build_dir="/home/${{ github.events.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq"
+          build_dir="/home/${{ github.event.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq"
           cd $build_dir
           refresh_date=$(date +%y-%m-%d)
           echo "FROM ghcr.io/dune-daq/sl7-spack:latest" > Dockerfile
@@ -62,7 +62,7 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v3
         with:
-          context: /home/${{ github.events.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq
+          context: /home/${{ github.event.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -71,7 +71,7 @@ jobs:
         if: always()
         run: |
 
-            rm -f /home/${{ github.events.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq/Dockerfile
+            rm -f /home/${{ github.event.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq/Dockerfile
             docker image prune -f
             docker container prune -f
             docker network prune -f
@@ -180,8 +180,8 @@ jobs:
     steps:
       - name: Intro
         run: |
-        echo "Will create a ghcr.io/dune-daq/alma9-slim-externals:v2.0${{ github.event.inputs.tag-suffix }} image"
-        echo "Image contents will include $HOSTNAME:/home/${{ github.events.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq/spack/externals/ext-v2.0"
+          echo "Will create a ghcr.io/dune-daq/alma9-slim-externals:v2.0${{ github.event.inputs.tag-suffix }} image"
+          echo "Image contents will include $HOSTNAME:/home/${{ github.event.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq/spack/externals/ext-v2.0"
 
       - name: Log in to the Container registry
         uses: docker/login-action@v2
@@ -202,7 +202,7 @@ jobs:
       - name: prepare build dir
         id: prep_build_dir
         run: |
-          build_dir="/home/${{ github.events.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq"
+          build_dir="/home/${{ github.event.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq"
           cd $build_dir
           refresh_date=$(date +%y-%m-%d)
           echo "FROM ghcr.io/dune-daq/alma9-spack:latest" > Dockerfile
@@ -218,7 +218,7 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v3
         with:
-          context: /home/${{ github.events.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq
+          context: /home/${{ github.event.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -227,7 +227,7 @@ jobs:
         if: always()
         run: |
 
-            rm -f /home/${{ github.events.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq/Dockerfile
+            rm -f /home/${{ github.event.inputs.account-to-copy }}/docker-scratch/cvmfs_dunedaq/Dockerfile
             docker image prune -f
             docker container prune -f
             docker network prune -f
