--- a/.github/workflows/slim_externals.yaml
+++ b/.github/workflows/slim_externals.yaml
@@ -2,7 +2,7 @@ name: Build docker image with slim externals
 
 on:
   schedule:
-    - cron: "30 1 * * *"
+    - cron: "30 * * * *"
 
   workflow_dispatch:
     inputs:
@@ -22,6 +22,13 @@ jobs:
       packages: write
       contents: read
     steps:
+      - name: Initialize variables
+        run: |
+          INPUT_SUFFIX=${{ github.event.inputs.tag-suffix }}
+          SUFFIX=${INPUT_SUFFIX:-""}
+          INPUT_USER=${{ github.event.inputs.account-to-copy }}
+          USER=${INPUT_USER:-"dingpf"}	
+
       - name: Intro
         run: |
           echo "Will create a ghcr.io/dune-daq/sl7-slim-externals:v1.1${{ github.event.inputs.tag-suffix }} image"
