Fixup workflow actions

--- a/.github/workflows/python-tiny-proxy.yaml
+++ b/.github/workflows/python-tiny-proxy.yaml
@@ -1,4 +1,4 @@
-name: Build tinyproxy docker image
+name: Build python-tiny-proxy docker image
 
 on:
   schedule:
@@ -9,7 +9,7 @@ on:
     tags:
       - 'v*'
     paths:
-      - dockerfiles/tinyproxy.dockerfile
+      - dockerfiles/python-tiny-proxy.dockerfile
 
   workflow_dispatch:
 
@@ -51,7 +51,7 @@ jobs:
           build_dir="${{ github.workspace }}/docker-build"
           mkdir -p $build_dir
           cd $build_dir
-          cp ${{ github.workspace }}/daq-docker/dockerfiles/tinyproxy.dockerfile $build_dir/Dockerfile
+          cp ${{ github.workspace }}/daq-docker/dockerfiles/python-tiny-proxy.dockerfile $build_dir/Dockerfile
       
       - name: Build and push Docker images
         uses: docker/build-push-action@v3
