--- a/.github/workflows/python-tiny-proxy.yaml
+++ b/.github/workflows/python-tiny-proxy.yaml
@@ -40,7 +40,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            ghcr.io/DUNE-DAQ/tinyproxy
+            ghcr.io/DUNE-DAQ/python-tiny-proxy
           tags: |
             type=raw,value=latest
             type=ref,event=branch
