--- a/.github/workflows/slim_externals.yaml
+++ b/.github/workflows/slim_externals.yaml
@@ -1,8 +1,8 @@
 name: Build docker image with slim externals
 
 on:
-  schedule:
-    - cron: "30 1 * * *"
+  #schedule:
+  #  - cron: "30 1 * * *"
 
   workflow_dispatch:
 
