JCF: move the creation of the slim externals image to daq.fnal.gov

--- a/.github/workflows/slim_externals.yaml
+++ b/.github/workflows/slim_externals.yaml
@@ -10,7 +10,7 @@ jobs:
 
   build_sl7_slim_externals:
     name: build_sl7
-    runs-on: [self-hosted]
+    runs-on: daq
     permissions:
       packages: write
       contents: read
@@ -67,7 +67,7 @@ jobs:
 
   build_c7_slim_externals:
     name: build_c7
-    runs-on: [self-hosted]
+    runs-on: daq
     needs: build_sl7_slim_externals
     permissions:
       packages: write
@@ -114,7 +114,7 @@ jobs:
 
   build_c8_slim_externals:
     name: build_c8
-    runs-on: [self-hosted]
+    runs-on: daq
     needs: build_sl7_slim_externals
     permissions:
       packages: write
@@ -161,7 +161,7 @@ jobs:
 
   build_alma9_externals:
     name: build_al9_initial
-    runs-on: [self-hosted]
+    runs-on: daq
     permissions:
       packages: write
       contents: read
@@ -218,7 +218,7 @@ jobs:
 
   build_alma9_slim_externals:
     name: build_alma9
-    runs-on: [self-hosted]
+    runs-on: daq
     needs: build_alma9_externals
     permissions:
       packages: write
